# lab4_informatika

./: .gitignore  CMakeLists.txt  main.cpp
include/: arithmetic_progression_generator.h  array_enumerator.h  cardinal.h  concat_generator.h  console_interface.h  dynamic_array.h  exceptions.h  finite_sequence_generator.h  icollection.h  ienumerable.h  ienumerator.h  igenerator.h  insertion_generator.h  lazy_sequence.h  lazy_sequence_enumerator.h  lazy_sequence_read_stream.h  map_generator.h  mutable_array_sequence.h  online_statistics.h  option.h  replay_generator.h  sequence.h  sequence_read_stream.h  sequence_write_stream.h  stream.h  subsequence_generator.h  where_generator.h
include/lazy/: igenerator.h  lazy_sequence.h  lazy_sequence_enumerator.h
include/lazy/generators/: arithmetic_progression_generator.h  concat_generator.h  finite_sequence_generator.h  insertion_generator.h  map_generator.h  replay_generator.h  subsequence_generator.h  where_generator.h
include/sequence/: dynamic_array.h  ienumerator.h  mutable_array_sequence.h  sequence.h
include/stream/: lazy_sequence_read_stream.h  read_only_stream.h  sequence_read_stream.h  sequence_write_stream.h  stream.h  write_only_stream.h
src/: cardinal.cpp  console_interface.cpp  online_statistics.cpp
tests/: cardinal_tests.cpp  generator_tests.cpp  large_data_tests.cpp  lazy_sequence_basic_tests.cpp  lazy_sequence_edge_tests.cpp  lazy_sequence_operations_tests.cpp  online_statistics_edge_tests.cpp  online_statistics_tests.cpp  stream_edge_tests.cpp  stream_tests.cpp
